--- a/index.html
+++ b/index.html
@@ -747,8 +747,8 @@
 
         // Enter button functionality
         enterBtn.addEventListener('click', () => {
-            // Add your navigation logic here
-            alert('Welcome to the system!');
+            // Navigate to portfolio page
+            window.location.href = 'portfolio.html';
         });
 
         // Particle system
